Reemplazado el uso de 'Stream.collect(Collectors.toList())' a 'Stream.toList()'